tests/compile-fail/integration__integration__difficulty__diff_switch_mismatched_number_of_cases.snap
---
source: tests/integration/difficulty.rs
expression: stderr
---
error: mismatched diff switch lengths in a single statement
   ┌─ <input>:11:10
   │
11 │     I0 = (2:3:4:5) + (1:2:3:4:5);
   │          ^^^^^^^^^   ^^^^^^^^^^^ 5 cases
   │          │            
   │          4 cases


